--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "reconnect-net": "1.1.1",
     "server-destroy": "^1.0.1",
     "typedarray-to-buffer": "^3.1.5",
-    "v8-profiler-node8": "^5.7.7",
     "z-schema": "^3.19.1",
     "z-schema-errors": "^0.2.1"
   },
@@ -49,6 +48,7 @@
     "mocha": "~5.0.4",
     "mockdate": "~2.0.2",
     "progress": "~2.0.0",
-    "rimraf": "~2.6.2"
+    "rimraf": "~2.6.2",
+    "v8-profiler-node8": "^5.7.7"
   }
 }
